force-app/main/default/objects/Inventory_Left_on_Job__c/Inventory_Left_on_Job__c.object-meta.xml
<CustomObject>
    <label>Inventory Left on Job</label>
    <nameField>
        <displayFormat>ILOJ-{0000000000}</displayFormat>
        <label>Inventory Left on Job Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Left on Job</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>