force-app/main/default/objects/Inventory_Left_on_Job__c/fields/From_Location__c.field-meta.xml
<CustomField>
    <fullName>From_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>From Location</label>
    <referenceTo>TrackIT__Location__c</referenceTo>
    <relationshipLabel>Inventory Left on Job</relationshipLabel>
    <relationshipName>Inventory_Left_on_Job</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>