force-app/main/default/objects/Inventory_Left_on_Job__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>TrackIT__Inventory__c</referenceTo>
    <relationshipLabel>Inventory Left on Job</relationshipLabel>
    <relationshipName>Inventory_Left_on_Job</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>