force-app/main/default/objects/Inventory_Left_on_Job__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Project__c.Krow__Archived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Inventory Left on Job</relationshipLabel>
    <relationshipName>Inventory_Left_on_Job</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>