force-app/main/default/objects/Inventory_Left_on_Job__c/fields/Needed_on_Job_Until__c.field-meta.xml
<CustomField>
    <fullName>Needed_on_Job_Until__c</fullName>
    <label>Needed on Job Until</label>
    <type>DateTime</type>
</CustomField>